--- a/style.css
+++ b/style.css
@@ -4,120 +4,90 @@ body{
     background: #F5F5F5;
 }
 .container{
-
     width: 100%;
     height: 100%;
 }
-#top{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-nav{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 50px 20px 50px;
-}
-.nav_list{
-    display: none;
-    flex-direction: row;
-    justify-content: space-around;
-    list-style: NONE;
-    width: 50%;
-     font-family: Colfax;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 0em;
-    text-align: left;
-}
+ 
+a:link {
+    color: grey; text-decoration: none;}
+/* visited link */
+a:visited {
+    color: grey; text-decoration: none;}
+/* mouse over link */
+a:hover {
+    color: rgb(55, 255, 0); text-decoration: underline;}
+/* selected link */
+a:active { color: red; text-decoration: none;}
 
-.mln{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-#mln_text{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 506px;
-}
-.mln_image{
-width: 100%;
-height: 506px;
-}
-.mln_image img{
-    width: 100%;
-    height: 506px;
-    }
-.p_mln{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    font-family: 'Colfax';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 96px;
-    line-height: 115px;
-    text-transform: uppercase;
-    color: #000000;
-    margin: 0%;
-    padding: 0%;
-}
+#top{ display: flex; flex-direction: column; width: 100%; display: flex; flex-direction: column;}
 
-.p_disability{
-    display: flex;
-     justify-content: center;
-    align-items: center;
-    width: 100%;
-     font-family: 'Italian Plate No2';
-     font-style: normal;
-    font-weight: 700;
-     font-size: 30px;
-     line-height: 36px;
-     text-transform: uppercase;
-    color: #000000;
-     margin: 0px;
-     padding: 0%;
-}
- .btn {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 20px;
-    gap: 10px;
-     width: 97px;
-     height: 40px;
-     background: #000000;
-     color: white;
-     font-size: large;
+nav{  display: flex; flex-direction: row; justify-content: space-between; align-items: center; padding: 20px 50px 20px 50px;}
+
+.nav_list{  display: none;  flex-direction: row; justify-content: space-around;  list-style: NONE;  width: 50%;   font-family: Colfax; font-size: 24px;  font-weight: 400;  line-height: 30px; letter-spacing: 0em; text-align: left;}
+
+.mln{ display: flex;  flex-direction: column; align-items: center; justify-content: center; width: 100%; display: flex; flex-direction: column; }
+
+#mln_text{ display: flex; flex-direction: column; align-items: center;  justify-content: center; width: 100%; height: 506px;}
+
+.mln_image { width: 100%; height: 506px;}
+
+.mln_image img{ width: 100%; height: 506px; }
+
+.p_mln{ display: flex; justify-content: center; align-items: center; width: 100%; font-family: 'Colfax'; font-style: normal; font-weight: 700; font-size: 96px; line-height: 115px; text-transform: uppercase; color: #000000; margin: 0%; padding: 0%;}
+
+.p_disability{   display: flex;  justify-content: center;  align-items: center;  width: 100%;  font-family: 'Italian Plate No2';  font-style: normal;  font-weight: 700;  font-size: 30px;  line-height: 36px;  text-transform: uppercase;  color: #000000; margin: 0 0 20px  0; padding: 0%; line-height: 25px; }
+     
+    .btn {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 20px;
+        gap: 10px;
+        width: 97px;
+        height: 40px;
+        background: #000000;
+        color: white;
+        font-size: large; 
+    } .btn1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 20px;
+        gap: 10px;
+        width: 170px;
+        height: 40px;
+        background: #d60000;
+        color: white;
+        font-size: large;
+        }
+    .btn2 {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 20px;
+        gap: 10px;
+        width: 170px;
+        height: 40px;
+        background-color: transparent;
+        color: white;
+        font-size: large;
+        }
+    .en_btn{
+        display: none;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 20px;
+        gap: 10px;
+        width: 97px;
+        height: 40px;
+        background: #000000;
+        color: white;
+        font-size: large;
     }
-.en_btn{
-    display: none;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 20px;
-    gap: 10px;
-     width: 97px;
-     height: 40px;
-     background: #000000;
-     color: white;
-     font-size: large;
-}
     .menue_btn{
         display: flex;
         flex-direction: row;
@@ -131,76 +101,18 @@ height: 506px;
          color: white;
          font-size: large;
     }
-    .btn2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 20px;
-    gap: 10px;
-    width: 170px;
-    height: 40px;
-    background-color: transparent;
-    color: white;
-    font-size: large;
-    }
-    .btn1 {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding: 10px 20px;
-        gap: 10px;
-        width: 170px;
-        height: 40px;
-        background: #d60000;
-        color: white;
-        font-size: large;
-        }
-#main{
-    display: flex;
-    flex-direction: column;
-}
-.statistics_section{
-    display: flex;
-    flex-direction: column;
-    margin: 117px 0 117px 0;
-}
-.accounted_for{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 446px;
-    width: 100%;
-    background: #10827B;
-}
+    
+   
+#main{ display: flex; flex-direction: column; }
 
-.not_accounted{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 446px;
-    width: 100%;
-    background: #00FFD9;
-}
+.statistics_section{ display: flex; flex-direction: column; margin: 117px 0 117px 0; }
 
-.statisics_no{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    font-family: 'Italian Plate No2';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 60px;
-    line-height: 80px;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    padding: 0px;
-    margin: 0px;    
-}
+.accounted_for{ display: flex; flex-direction: column; justify-content: center; align-items: center; height: 446px; width: 100%; background: #10827B; }
+
+.not_accounted { display: flex; flex-direction: column; justify-content: center;  align-items: center; height: 446px; width: 100%; background: #00FFD9; }
+
+.statisics_no { display: flex;  flex-direction: column;  align-items: center;  width: 100%; font-family: 'Italian Plate No2';  font-style: normal; font-weight: 700; font-size: 60px; line-height: 80px; text-transform: uppercase; color: #FFFFFF; padding: 0px; margin: 0px; }
+
 .statisics_title{
     display: flex;
     flex-direction: column;
@@ -372,10 +284,45 @@ height: 506px;
      }
     
     footer{
+        display: flex;
+        flex-direction: column;
+       line-height: 30px;
         width: 100%;
-        height: 369px;
         background: #000000;
+        align-items: center;
+        margin: 0px;
+        padding: 0px;
     }
+    .footer_a{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 70%;
+        margin: 0;
+        font-family: 'Colfax';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 30px;
+    }
+  
+    .footer_b{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        margin: 0;
+        font-family: 'Colfax';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 30px;
+    }
+        
 
 /* desktop view */
 @media screen and (min-width:700px) {
@@ -497,4 +444,23 @@ height: 506px;
         justify-content: space-around;
         
      }
+     footer{
+        flex-direction: row;
+          align-items:flex-start;
+        }
+    .footer_a{
+        align-items: center;
+        text-align: center;
+        width: 70%;
+        line-height: 60px;
+    }
+  
+    .footer_b{
+        flex-direction: row;
+        align-items: center;
+        text-align: center;
+        
+        line-height: 60px;
+    }
+    
     }
