--- a/style.css
+++ b/style.css
@@ -220,10 +220,87 @@ nav{  display: flex; flex-direction: row; justify-content: space-between; align-
 
 
      .ranking_report_section{
-        height: 500px;
+        display: flex;
+        flex-direction: column;
+        background:black;
         width: 100%;
-    background: #000000;
+        height: 199%;
+    
     }
+
+    .ranking_title{
+        display: flex;
+flex-direction: row;
+        color: white;
+        width: 100%;
+    }
+    .report{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    justify-content: center;
+    margin: 50px;
+    }
+
+
+.bhcpf_report{
+    display: flex;
+    flex-direction: column;
+    background-color: red;
+    width: 80%;
+
+}
+
+
+.report_title{
+    display: flex;
+    flex-direction: row;
+width: 100%;
+height: 300px;
+background: #000000;
+}
+
+.report_sumary{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 275px;
+    background: #00FFD9;}
+
+
+
+
+
+#rect1_box3{
+    width: 30%;
+    height: 76px;
+    background: #00FFD9;
+}
+#rect2_box3{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:end;
+    width: 60%;
+    height: 100%;
+    background: url(images/rect_box3.png);background-size: cover;
+    background-repeat: no-repeat;
+
+}
+#rect3_box3{
+    width: 10%;
+height: 50px;
+    background: #00FFD9;
+    margin-top: 10%;
+}
+#rect4_box3{
+    width: 30%;
+    height: 25%;
+    background: #00FFD9;
+   
+}
     .partnership{
         width: 100%;
         height: 308px;
@@ -322,6 +399,26 @@ font-weight: 400;
 font-size: 24px;
 line-height: 30px;
     }
+.rp_title{
+width: 310px;
+height: 60px;
+font-family: 'Colfax';
+font-style: normal;
+font-weight: 500;
+font-size: 25px;
+line-height: 30px;
+text-transform: uppercase;
+color: #000000;
+    }
+.rp_text{
+    width: 295px;
+    height: 123px;
+    font-family: 'Colfax';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    color: #000000;}
         
 
 /* desktop view */
@@ -459,8 +556,14 @@ line-height: 30px;
         flex-direction: row;
         align-items: center;
         text-align: center;
-        
         line-height: 60px;
     }
+    .ranking_report_section{
+        flex-direction: column;
+    }
+    .ranking_report{
+        display: flex;
+    }
+   
     
     }
