--- a/style.css
+++ b/style.css
@@ -273,6 +273,65 @@ background: #000000;
 
 
 
+#rect1_box1{
+    width: 30%;
+    height: 76px;
+    background: #00FFD9;
+}
+#rect2_box1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:end;
+    width: 60%;
+    height: 100%;
+    background: url(images/rect_box3.png);background-size: cover;
+    background-repeat: no-repeat;
+
+}
+#rect3_box1{
+    width: 10%;
+height: 50px;
+    background: #00FFD9;
+    margin-top: 10%;
+}
+#rect4_box1{
+    width: 30%;
+    height: 25%;
+    background: #00FFD9;
+   
+}
+
+#rect1_box2{
+    width: 50%;
+    height: 76px;
+    background: blacl;
+}
+#rect2_box2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 60%;
+    height: 100%;
+    background: url(images/rect_box2.png);background-size: cover;
+    background-repeat: no-repeat;
+
+}
+#rect3_box2{
+    width: 10%;
+height: 50px;
+    background: #00FFD9;
+
+}
+#rect4_box2{
+    width: 30%;
+    height: 25%;
+    background: #00FFD9;
+    margin-top: 20px;
+   
+}
+
+
 #rect1_box3{
     width: 30%;
     height: 76px;
@@ -301,7 +360,9 @@ height: 50px;
     background: #00FFD9;
    
 }
-    .partnership{
+
+
+.partnership{
         width: 100%;
         height: 308px;
         background: #FFFFFF;
@@ -421,6 +482,57 @@ color: #000000;
     color: #000000;}
         
 
+/* overlay */
+
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+  }
+  
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+    }
+  }
 /* desktop view */
 @media screen and (min-width:700px) {
     
